
LINK_DIRECTORIES(
 ${VISHNU_EXCEPTION_INCLUDE_DIR}
)

INCLUDE_DIRECTORIES(
  .
  ${DIET_INCLUDE_DIR}
  ${EMF_DATA_DIR}
  ${UMS_DATA_DIR}
  ${TMS_EMF_DATA_DIR}
  ${TMS_DATA_DIR}
  ${EMF4CPP_INCLUDE_DIR}
  ${VISHNU_EXCEPTION_INCLUDE_DIR}
  ${CLIENT_PROXY_SOURCE_DIR}
  ${TMS_CLIENT_PROXY_SOURCE_DIR}
  ${UTILVISHNU_SOURCE_DIR}
  ${Boost_INCLUDE_DIRS}
  ${API_SOURCE_DIR}
)

ADD_LIBRARY(
vishnu-tms-api api_tms.cpp
)
SET_TARGET_PROPERTIES(vishnu-tms-api PROPERTIES COMPILE_FLAGS "-fPIC")

TARGET_LINK_LIBRARIES(vishnu-tms-api
  ${DIET_CLIENT_LIBRARIES}
  ${Boost_LIBRARIES}
  emf4cpp-UMS_Data
  exception-vishnu
  ums-client-proxy
  tms-client-proxy
  utils-vishnu
)

INSTALL( TARGETS vishnu-tms-api DESTINATION lib )
INSTALL( FILES api_tms.hpp DESTINATION include)

